@@ -18,6 +18,9 @@ wishlist:
 
 version 1.16:
 
+	Improvements:
+	- add bugtracker to meta
+
 version 1.15: Thu  6 Nov 11:05:27 CET 2025
 
 	Changes:
